--- a/CaronteApp/package.json
+++ b/CaronteApp/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "angularfire2": "^5.0.1",
     "core-js": "^2.5.4",
+    "firebase": "^5.5.1",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
